--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500;800&family=Jost:wght@500&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <title>Calculator</title>
 </head>
 <body>
@@ -18,14 +22,14 @@
             </div>
         </div>
         <div id="display">
-
+            
         </div>
         <div id="body">
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>CLR</button>
-            <button>DEL</button>
+            <button style="background-color: rgb(144, 52, 31);">C</button>
+            <button style="background-color: rgb(144, 52, 31);">CE</button>
             <button>4</button>
             <button>5</button>
             <button>6</button>
@@ -36,14 +40,14 @@
             <button>3</button>
             <button>×</button>
             <button>÷</button>
-            <button>•</button>
+            <button>.</button>
             <button>0</button>
             <button> =</button>
             <button>+</button>
             <button>−</button>
         </div>
     </main>
-    <!--<footer>Developed by<a target="_blank" href="https://github.com/vmarcoo">&nbsp;vmarcoo&nbsp;</a>for<a target="_blank" href="https://theodinproject.com/">&nbsp;The Odin Project's Foundations Course&nbsp;</a></footer> -->
+    <footer>Developed by&nbsp;<a target="_blank" href="https://github.com/vmarcoo">vmarcoo</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a target="_blank" href="https://theodinproject.com/">The Odin Project's Foundations Course</a></footer>
 </body>
 <script src="./script.js"></script>
 </html>
