Equal button logic in progress, almost done.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500;800&family=Jost:wght@500&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500;800&family=Jost:wght@500&family=Orbitron:wght@600&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <title>Calculator</title>
@@ -22,29 +25,30 @@
             </div>
         </div>
         <div id="display">
-            
+            <div id="display-up"></div>
+            <div id="display-down">0</div>
         </div>
         <div id="body">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button style="background-color: rgb(144, 52, 31);">C</button>
-            <button style="background-color: rgb(144, 52, 31);">CE</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>%</button>
-            <button>√</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>×</button>
-            <button>÷</button>
-            <button>.</button>
-            <button>0</button>
-            <button> =</button>
-            <button>+</button>
-            <button>−</button>
+            <button id="numberBtn">7</button>
+            <button id="numberBtn">8</button>
+            <button id="numberBtn">9</button>
+            <button id="cBtn" style="background-color: rgb(144, 52, 31);">C</button>
+            <button id="ceBtn" style="background-color: rgb(144, 52, 31);">CE</button>
+            <button id="numberBtn">4</button>
+            <button id="numberBtn">5</button>
+            <button id="numberBtn">6</button>
+            <button id="operatorBtn">%</button>
+            <button id="sqrtBtn">√</button>
+            <button id="numberBtn">1</button>
+            <button id="numberBtn">2</button>
+            <button id="numberBtn">3</button>
+            <button id="operatorBtn">×</button>
+            <button id="operatorBtn">÷</button>
+            <button id="dotBtn">.</button>
+            <button id="numberBtn">0</button>
+            <button id="equalBtn">=</button>
+            <button id="operatorBtn">+</button>
+            <button id="operatorBtn">−</button>
         </div>
     </main>
     <footer>Developed by&nbsp;<a target="_blank" href="https://github.com/vmarcoo">vmarcoo</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a target="_blank" href="https://theodinproject.com/">The Odin Project's Foundations Course</a></footer>
