Project ready to use.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button id="operatorBtn">÷</button>
             <button id="dotBtn">.</button>
             <button id="numberBtn">0</button>
-            <button id="equalBtn">=</button>
+            <button id="equalsBtn">=</button>
             <button id="operatorBtn">+</button>
             <button id="operatorBtn">−</button>
         </div>
